--- a/src/Components/StaffProfile/StaffProfile.css
+++ b/src/Components/StaffProfile/StaffProfile.css
@@ -1,17 +1,30 @@
-#addDetailsCont{
-background-image: url("./bg4.jpg");
-background-repeat: no-repeat;
-background-size: cover;
+#addDetailsCont {
+    background-image: url("./bg4.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-.fields{
+
+.fields {
     padding: 7%;
     padding-bottom: 1% !important;
-    height: auto;
+    height: 98vh;
+    overflow-y: auto;
     border-radius: 30px;
     box-shadow: 30px 30px 80px rgba(255, 3, 3, 0.1);
     background-color: rgb(160, 221, 221);
 }
-.btn4{
+
+@media (max-width: 767px) {
+
+    /* Apply the following styles only for screens with a max-width of 767px (typically mobile devices) */
+    .fields {
+        height: auto;
+        /* Adjust the height as needed */
+    }
+   
+}
+
+.btn4 {
     width: 15vw;
     height: 7.5vh;
     border-radius: 40%;
@@ -19,7 +32,8 @@ background-size: cover;
     background-color: black;
     color: white;
 }
-.btn4:hover{
+
+.btn4:hover {
     background-color: white;
     color: black;
 }
