--- a/src/Components/ForgetPassword/ForgetPassword.css
+++ b/src/Components/ForgetPassword/ForgetPassword.css
@@ -1,17 +1,68 @@
-
-.forgetField{
-    height: 55vh;
-    background-color: yellow;
-    padding-top: 2%;
+.forgetField {
     padding-left: 5%;
     padding-right: 5%;
     padding-bottom: 5%;
+    height: 90vh;
+    padding: 8%;
+    padding-top: 5%;
+    border-radius: 30px;
+    box-shadow: 10px 10px 80px rgba(0, 0, 0, 0.1);
 
 }
 
-.btnSuc{
+.btnSuc {
     background-color: rgb(13, 238, 62);
     color: black;
     border: none;
     outline: none;
+}
+
+.paraReset {
+    font-weight: 500;
+    font-size: medium;
+    text-align: center;
+    font-style: normal;
+}
+
+.imgCont {
+    display: flex;
+    justify-content: center;
+}
+
+.fingimg {
+    height: 23vh;
+    background-image: url('./finger.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.btnReset {
+    width: 10vw;
+    height: 6vh;
+}
+
+@media (max-width: 767px) {
+
+    /* Apply the following styles only for screens with a max-width of 767px (typically mobile devices) */
+    input {
+        height: 10vw;
+        /* Adjust the height as needed */
+    }
+
+    .btn {
+        width: 42% !important;
+        height: 32px !important;
+    }
+
+    .fingimg {
+        height: 16vh;
+        width: 32vw;
+    }
+
+    .btnReset {
+        width: 30vw;
+        height: 3vh;
+        margin-bottom: 3vh;
+    }
+
 }
