--- a/src/Components/Chart/GatePassVisualisation.css
+++ b/src/Components/Chart/GatePassVisualisation.css
@@ -20,6 +20,9 @@
     /* Add right margin for spacing */
     color: black;
 }
+.h1Chart{
+    text-align: center;
+}
 
 @media (max-width: 767px) {
     .h1Chart {
