--- a/src/Components/UpdateProfile/UpdateProfile.css
+++ b/src/Components/UpdateProfile/UpdateProfile.css
@@ -1,18 +1,20 @@
-#updateCont{
-    background-image: url("./bg3.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+#updateCont {
+
+    background-color: rgb(209, 203, 203);
 }
-.updateField{
+
+.updateField {
     padding-top: 5% !important;
     padding: 7%;
     height: 50vh;
     border-radius: 30px;
-    box-shadow: -6px -18px 80px whitesmoke; 
-       /* background-color: rgb(160, 221, 221); */
-    background-color: #A2B0FF;;
+    box-shadow: -6px -18px 80px whitesmoke;
+    /* background-color: rgb(160, 221, 221); */
+    background-color: #A2B0FF;
+    ;
 }
-.btn3{
+
+.btn3 {
     width: 50%;
     height: 48px;
     /* border-color: transparent; */
@@ -20,10 +22,19 @@
     color: whitesmoke;
     font-weight: 900;
 }
-.h1update{
+
+.h1update {
     font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 8.1px;
     font-size: 46px;
     text-align: center;
     color: black;
+}
+
+@media (max-width: 755px) {
+    #updateCont {
+        background-image: url("./bg3.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
 }
